@@ -5,6 +5,7 @@ Revision history for TAP
         - Parse pragmas
         - Process strict pragma
         - Correctly handle IO::Path object as SourceHandler::Raku @!incdirs
+        - Correctly pass through bailout Promise
 
 0.3.4  2022-01-21T23:29:46+01:00
         - Allow SourceHandler::Raku's incdirs arguments to be Str or IO::Path
